syntax = "proto3";
package proto;

// 商品模型
message ProdModel{
  // @inject_tag: json:"pid"
  int32 ProdId = 1;
  // @inject_tag: json:"pname"
  string ProdName = 2;
}

message ProdRequest{
  // @inject_tag: json:"size", form:"size"
  int32 size = 1;
}

message ProdListResponse{
  repeated ProdModel data = 1;
}

service ProdService{
  rpc GetProdList(ProdRequest) returns (ProdListResponse);
}